@@ -1,5 +1,10 @@
 2004-10-12  Damien Sandras  <dsandras@gnome.org>
 
+	* lib/contacts/gm_contacts-eds.cpp: Fixed speed dial edition and
+	searches on categories thanks to Chris Toshok.
+
+2004-10-12  Damien Sandras  <dsandras@gnome.org>
+
 	* src/urlhandler.cpp: Cleaned code. Fixed bugs #150416 and #150417
 	reported by Simon Mungewell. Thanks for his patch too.
 
